tests/samples/negative/pointers/raw_pointer_field_requires_unsafe.ax
module raw_pointer_field_requires_unsafe;

struct Pair {
    value: i32;
}

fn as_const_pair_ptr(value: &Pair) -> *const Pair {
    return unsafe { ptrat<*const Pair>(ptraddr(value)) };
}

fn main() -> i32 {
    let pair: Pair = Pair { value: 1 };
    let ptr: *const Pair = as_const_pair_ptr(&pair);
    return ptr.value;
}
